<resources>
    <string name="app_name">Rammel_Calculator</string>
    <string name="text_0">0</string>
    <string name="default_0">0</string>
    <string name="text_sqrt">√X</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_3">3</string>
    <string name="text_decimal">.</string>
    <string name="text_equals">=</string>
    <string name="text_add">+</string>
    <string name="text_c">C</string>
    <string name="text_7">7</string>
    <string name="text_4">4</string>
    <string name="text_1">1</string>
    <string name="text_mod">MOD</string>
    <string name="text_factorial">x!</string>
    <string name="text_pi">𝜋</string>
    <string name="text_delete">D</string>
    <string name="text_percent">%</string>
    <string name="text_divide">÷</string>
    <string name="text_multiply">X</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_minus">-</string>
    <string name="text_2">2</string>
    <string name="error_message_factorial">Only whole numbers are allowed for factorial</string>
</resources>